--- a/Amazing Numbers/Palindromic numbers/task-info.yaml
+++ b/Amazing Numbers/Palindromic numbers/task-info.yaml
@@ -383,5 +383,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/184/stages/933/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 29 Jan 2023 05:01:28 UTC"
 record: -1
