--- a/Amazing Numbers/Spy numbers/task-info.yaml
+++ b/Amazing Numbers/Spy numbers/task-info.yaml
@@ -690,8 +690,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13202#comment
-status: Failed
-feedback:
-  message: Test class can only have one constructor
-  time: "Thu, 02 Feb 2023 03:05:19 UTC"
+status: Solved
 record: 5
