--- a/Topics/StringBuilder/Love of big letters/task-info.yaml
+++ b/Topics/StringBuilder/Love of big letters/task-info.yaml
@@ -22,5 +22,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/23738#comment
-status: Unchecked
+status: Solved
 record: -1
