--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/531718/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Wed, 01 Feb 2023 20:29:37 UTC"
+update_date: "Thu, 02 Feb 2023 03:16:59 UTC"
 stages:
 - id: 931
   step: 13198
@@ -19,10 +19,10 @@ stages:
   is_completed: true
 - id: 935
   step: 13202
-  is_completed: false
+  is_completed: true
 - id: 936
   step: 13203
-  is_completed: false
+  is_completed: true
 - id: 937
   step: 13204
   is_completed: false
