--- a/Amazing Numbers/Happy and Sad numbers/task-info.yaml
+++ b/Amazing Numbers/Happy and Sad numbers/task-info.yaml
@@ -928,5 +928,9 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13205#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: "Fri, 03 Feb 2023 11:17:50 UTC"
 record: -1
